--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -7,5 +7,6 @@
   <script>
     {% include scripts/load-disqus.min.js %}
   </script>
+  <script id="dsq-count-scr" src="//{{ site.disqus_shortname }}.disqus.com/count.js" async></script>
   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
 </aside>
