구글 광고 삽입

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,6 +28,7 @@ layout: compress
 <head>
   {% include head.html %}
   {% include google_analytics.html %}
+  {% include google_addsense.html %}
 </head>
 
 <body>
