google adsense 변경

--- a/_includes/contents.html
+++ b/_includes/contents.html
@@ -13,8 +13,8 @@
   {{ post.content }}
 </div>
 <br/>
-<br/>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- <br/> -->
+<!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 <!-- 블로그-하단-반응형 -->
 <!-- <ins class="adsbygoogle"
     style="display:block; width:98%; height:300px;"
