구글 에드센스 적용

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="format-detection" content="telephone=no">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
-<meta name="naver-site-verification" content="22c5b4ef3bfda7fc6100671413989219de7a4ac8"/>
+<!-- 구글 서치 콘솔 -->
+<meta name="google-site-verification" content="8bmTNrCt0GjstnPvgQmuWqDpsCtAsPmjPW0tKPyZ2l4"/>
+<!-- 네이버 웹마스터 도구 -->
+<meta name="naver-site-verification" content="053e3fa18cd3d67158e7fa4b007027f4ca4e3bea"/>
 <meta property="og:title" content="{{ page.title }}">
 <meta property="og:type" content="article">
 
